# wow_retro

./: .env.template  .gitignore  Makefile  README.md  assets.py  docker-compose-db.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: e822039a61ba_create_guild_reports_table.py
conf/: logs.yaml
src/: constants.py  logger.py  start.py
src/wlogs/: client.py  queries.py
wowr/: __init__.py  assets.py  constants.py  logger.py
wowr/wlogs/: client.py  queries.py
